--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -22,22 +22,13 @@
                 <!--/* 메뉴 */-->
                 <nav>
                     <ul>
-                        <li class="has_sub"><a href="javascript: void(0);" class="on"><span>게시판 관리</span></a>
-                            <ul>
-                                <li><a href="/post/list.do" class="on">리스트형</a></li>
-                                <li><a href="javascript: alert('준비 중입니다.');">갤러리형</a></li>
-                                <li><a href="javascript: alert('준비 중입니다.');">캘린더형</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="javascript: alert('준비 중입니다.');"><span>회원 관리</span></a></li>
+                        <li><span>회원 관리</span></li>
                     </ul>
                 </nav>
             </div>
 
-            <!--/* 우측 영역 */-->
             <div class="rcontent">
 
-                <!--/* 페이지별 컨텐츠 */-->
                 <th:block layout:fragment="content"></th:block>
 
             </div>
